<resources>
    <string name="app_name">TextEasy</string>
    <string name="title_activity_contacts" translatable="false">Contacts</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8950844463555971/7532600047</string>
    <string name="banner_ad_unit_id_2" translatable="false">ca-app-pub-8950844463555971/7740762848</string>
    <string name="title_activity_list_of_words" translatable="false">ListOfWords</string>
    <string name="title_activity_settings" translatable="false">Settings</string>


    <string name="feedback_link" translatable="false">https://goo.gl/forms/9pN7x2zEeWEJ1v562</string>
    <string name="abbrev_link" translatable="false">https://goo.gl/forms/Q5basUo0KYFefejY2</string>
    <string name="medi_abbrev_link" translatable="false">https://goo.gl/forms/4t4PpvCN5Ws0QGsv1</string>

    <string name="feedbackWord" translatable="false">Feedback</string>
    <string name="abbrevWord" translatable="false">Help Add New Abbreviations</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>


    <string name="themeChoices" translatable="false">Theme Choices</string>
    <string-array name="list_of_themes">
        <item>Default</item>
        <item>Night</item>
        <!--<item>Custom</item>-->
    </string-array>
    <string-array name="list_of_themes_values">
        <item>1</item>
        <item>2</item>
        <!--<item>3</item>-->
    </string-array>


    <string name="themeChoice" translatable="false">Change Theme</string>
    <string name="about">About</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->


    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_settings1" translatable="false">Settings</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>


    <string name="title_activity_about_and_cont" translatable="false">AboutAndCont</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <!--ca-app-pub-8950844463555971/-->
    <!--ca-app-pub-3940256099942544/6300978111-->

    <string name="aboutSettings">About Us</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="makeDefault" translatable="false">Make TextEasy Default Messaging App</string>
    <string name="themeChanged" translatable="false">Change Themes</string>
    <string name="gotoSettings" translatable="false">Colorblind Mode</string>

    <string name="hello">Hello World!</string>
    <string name="title">Hello Notification!</string>
    <string name="notification_posted">Notification posted</string>


    <string-array name="reply_choices">
        <item>Yes</item>
        <item>No</item>
        <item>Maybe</item>
        <item>Hello</item>
        <item>Good Bye</item>
        <item>Can\'t Talk Now</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <string-array name="message_details">
        <item>Copy Text</item>
        <item>Read Aloud</item>
        <item>Share with FaceBook Messenger</item>
    </string-array>

    <string-array name="word_details">
        <item>Copy Text</item>
        <item>Read Aloud</item>
        <item>Change Word</item>
        <item>Delete Word</item>
    </string-array>

    <string name="folder_name">TextEasy</string>
    <string name="filename">wordlisted.txt</string>

    <string name="facebook_app_id">294900847607567</string>
    <string name="fb_login_protocol_scheme">fb294900847607567</string>

    <string name="ad_code">"ca-app-pub-8950844463555971~6055866848"</string>

    <string-array name="arc_colors">
        <item>#394948</item>
        <item>#5a7874</item>
        <item>#499092</item>
        <item>#43abae</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_statistic">Statistic</string>

</resources>
