<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/aboutSettings" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$DefaultPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/makeDefault" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$ShowNumberFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="Personal Information" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$WordListPreferenceFragment"
        android:icon="@mipmap/feedback"
        android:title="List Of Abbreviations" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$ThemePreferenceFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/themeChanged" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$SettingsThemePreferenceFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/gotoSettings" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$LoginPreferenceFragment"
        android:icon="@mipmap/facebook"
        android:title="Login with Facebook and/or Google" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$StatisticsPreferenceFragment"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="Statistics" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$FeedbackPreferenceFragment"
        android:icon="@mipmap/feedback"
        android:title="@string/feedbackWord" />

    <header
        android:fragment="app.easy.text.texteasy.Settings.Settings1Activity$NewAbbreviationsPreferenceFragment"
        android:icon="@mipmap/feedback"
        android:title="@string/abbrevWord" />




</preference-headers>
